[package]
name = "fetch-rs"
authors = ["Andrew Fraser a@serfrae.com"]
version = "0.1.0"
edition = "2021"
description = "Code snipped for fetching json - because I'm lazy"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.15", features = ["json"] }
serde = "1.0.158"
tokio = { version = "1.26.0", features = ["full"] }
